2004-04-19 MickeM
 + Added SSL support
 + Added alot of new options
 + Added documentation
 * Renamed and restructured NSCLientCompat to CheckSystem
 * *ALOT* of fixes all over
 : We are now starting to get to something that is "stable"
 : This means that soon you might actually be able to use this.
 
2005-03-28 MickeM
 * Changed the Thread class a bit (mutex -> signal, and CreatThread does not return the instance)
 * Moved settings "keys" fro NRPE to config.h
 * Changed build options (added Distribution) which builds a zip file under ./dist (requires 7z installed)
 * Minor tweaks to error/debug logging and small fixes "here and there"

2005-03-26 MickeM
 + NRPE Support (very basic, no encryption, and nothing fancy)
 * Socket classes rewritten
 + Added NSCModuleHelper::getSettingsSection to the API

2005-03-22 MickeM
 * Fixed NSClientListener return codes for basic commands
 * Extracted arrayBuffer code into new files under /include
 * Minor tweaks in the API (fixed minor issues)
 + Added some basic "tests" to a few commands (getToken, and arrayBuffer related)

2005-03-21 MickeM
 * Fixed BUG in inject command (now things should "work" again, but far from stable)
 + Added NRPE return code
 * Fixed some return states to NSClientListener (not verified yet, but soon they will be back in order :)

2005-03-20 MickeM
 * Fundamental API changes (due to NRPE compatibility)
   - HandleCommand has changed
   - Inject has changed
   - Most API calls have new "return codes" (typedef:ed INT to allow for return code compiler checks)
   - A lot of the old return codes have changed
 + Preliminary NRPE support (can parse and execute incoming requests, cant return data yet, and no encryption)
 + New SimpleSocket in include/ will be used as base class for Listeners
 * A lot of rewrite to the NSC API

2005-03-19 MickeM
 * Refactored out NSCLient Listener as a separate module
 + Added initial NRPE listener module (not yet implemented only a shell)